Feat: scrap, memberStockSnapshot 수정